--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MeuPrimeiroAppDio</string>
+    <string name="app_name">MyFirstAppDio</string>
     <string name="hello_dio">Hello World</string>
+    <string name="error_message">An error has occurred. Please try again.</string>
+    <string name="submit_button">Send</string>
+    <string name="email_label">Email Address:</string>
 </resources>
